refactor into Modular modules; add sample Modular ser-deserializer and auth provider